--- a/styles.css
+++ b/styles.css
@@ -4,3 +4,17 @@
     box-sizing: border-box;
 }
 
+
+.game-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    column-gap: 5px;
+    row-gap: 5px;
+    background-color: #000;
+    width: 400px;
+    height: 400px;
+    border: 1px solid purple;
+}
+.square {
+    background-color: white;
+}
