--- a/styles.css
+++ b/styles.css
@@ -1,20 +1,56 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
+#title {
+  text-align: center;
+  margin: 50px;
+  font-size: 40px;
+}
 
-.game-container {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    column-gap: 5px;
-    row-gap: 5px;
-    background-color: #000;
-    width: 400px;
-    height: 400px;
-    border: 1px solid purple;
+#game-container {
+  display: flex;
+  width: 80%;
+  justify-content: space-around;
+}
+
+#game-board {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  column-gap: 5px;
+  row-gap: 5px;
+  background-color: #000;
+  width: 400px;
+  height: 400px;
 }
 .square {
-    background-color: white;
+  background-color: white;
+}
+
+#game-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+#timer {
+  font-size: 50px;
+  margin-bottom: 50px;
+}
+
+.player {
+  font-size: 32px;
+}
+
+.score {
+  font-size: 50px;
+  font-weight: bold;
+  padding-left: 40px;
+}
+
+.arrow {
+  padding-right: 20px;
 }
