--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,11 @@
 }
 .square {
   background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 60px;
+  font-weight: bold;
 }
 
 #game-info {
