--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@
 #game-board {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
   column-gap: 5px;
   row-gap: 5px;
   background-color: #000;
